fullSandbox11072023/force-app/main/default/objects/Duplicate_Contact__c/Duplicate_Contact__c.object-meta.xml
<CustomObject>
    <label>Duplicate Contact</label>
    <nameField>
        <displayFormat>DC-{0000000000}</displayFormat>
        <label>Duplicate Contact#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>