fullSandbox11072023/force-app/main/default/objects/Duplicate_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicate Contacts</relationshipLabel>
    <relationshipName>Duplicate_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>