fullSandbox11072023/force-app/main/default/objects/Duplicate_Contact__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;Anesthesia/Respiratory&quot;), &quot;Anesthesia/Respiratory&quot; + BR() , NULL) +
IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;OEM&quot;), &quot;OEM&quot; + BR() , NULL) +
IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;Specialty&quot;), &quot;Specialty&quot; + BR() , NULL) +
IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;Surgical&quot;), &quot;Surgical&quot; + BR() , NULL) +
IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;Vascular&quot;), &quot;Vascular&quot; + BR() , NULL) +
IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;Interventional Access&quot;), &quot;Interventional Access&quot; + BR() , NULL)+
IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;EMS&quot;), &quot;EMS&quot; + BR() ,NULL)+
IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;Urology&quot;), &quot;Urology&quot; + BR() ,NULL)+
IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;Cardiac&quot;), &quot;Cardiac&quot; + BR() ,NULL)+
IF(INCLUDES( Contact__r.Business_Unit1__c , &quot;LMA&quot;), &quot;LMA&quot;, NULL)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>