fullSandbox11072023/force-app/main/default/objects/Duplicate_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Duplicate Contacts</relationshipLabel>
    <relationshipName>Duplicate_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>