fullSandbox11072023/force-app/main/default/objects/Duplicate_Contact__c/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Duplicate_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>