fullSandbox11072023/force-app/main/default/objects/Duplicate_Contact__c/fields/ContactOwnerFName__c.field-meta.xml
<CustomField>
    <fullName>ContactOwnerFName__c</fullName>
    <formula>Contact_Owner__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactOwnerFName</label>
    <type>Text</type>
</CustomField>