fullSandbox11072023/force-app/main/default/objects/Duplicate_Contact__c/fields/ContactOwnerLname__c.field-meta.xml
<CustomField>
    <fullName>ContactOwnerLname__c</fullName>
    <formula>Contact_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactOwnerLname</label>
    <type>Text</type>
</CustomField>