fullSandbox11072023/force-app/main/default/objects/Duplicate_Contact__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <formula>Contact__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Phone</label>
    <type>Text</type>
</CustomField>