fullSandbox11072023/force-app/main/default/objects/Duplicate_Contact__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <formula>Contact__r.Work_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone No</label>
    <type>Text</type>
</CustomField>